--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   provider: ^6.1.5+1
   intl: ^0.20.2
   fl_chart: ^1.1.1
+  image_picker: ^1.2.0
+  firebase_storage: ^13.0.3
 
 
 
